Some zippies on installation page

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,34 @@ hr {
   background-color: rgba(0, 0, 0, 0.2);
   width: 100%;
 }
+details {
+  background-color: rgba(50, 150, 220, 0.08);
+  margin-bottom: 0.5em;
+  padding-left: 1em;
+  overflow: hidden; /* Suppress margin-collapsing */
+}
+details[open] {
+  border-bottom: 1px solid rgba(0, 0, 128, 0.2);
+  margin-bottom: 1em;
+}
+details summary {
+  font-weight: bold;
+  background-color: rgba(50, 150, 220, 0.1);
+  border-color: rgba(0, 0, 128, 0.2);
+  border-width: 1px;
+  border-style: solid none;
+  padding: 0.2em;
+  margin-left: -1em;
+}
+details summary:hover {
+  background-color: rgba(50, 150, 220, 0.2);
+  cursor: pointer;
+}
+code {
+  background-color: rgba(255, 255, 0, 0.05);
+  border: 1px solid #feb;
+  padding: 1px;
+}
 /* Mini layout, for phones */
 @media (max-width: 600px) {
   aside {
