Fix the v10 css style.
the leading "." was missing.

--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ code {
 }
 
 /* Version marker ornaments */
-.v6::before, .v7::before, .v8::before, .v9::before, v10::before {
+.v6::before, .v7::before, .v8::before, .v9::before, .v10::before {
   color: #008;
   border-radius: 3px;
   padding: 0.2em 0.6em;
