--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,14 @@
   <link rel="stylesheet" href="{{'styles.css' | relative_url}}">
   <link href="https://fonts.googleapis.com/css?family=Nunito:600" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159320230-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-159320230-1');
+  </script>
 </head>
 <body>
   <aside>
