--- a/styles.css
+++ b/styles.css
@@ -75,9 +75,12 @@ main {
 main img {
   max-width: 100%;
 }
-main h1, main h2, main h3, main h4 {
+main h1, main h2 {
   color: rgb(0, 0, 128);
   border-bottom: 1px solid #def;
+}
+main h3 {
+  color: rgb(64, 64, 64);
 }
 hr {
   border: none;
