--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <head>
   <link rel="stylesheet" href="{{'styles.css' | relative_url}}">
+  <link rel="icon" href="{{'favicon.png' | relative_url}}" sizes="16x16" type="image/png">
+  <link rel="icon" href="{{'favicon.svg' | relative_url}}" sizes="any" type="image/svg+xml">
   <link href="https://fonts.googleapis.com/css?family=Nunito:600" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
