--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="{{'styles.css' | relative_url}}">
   <link rel="icon" href="{{'favicon.png' | relative_url}}" sizes="16x16" type="image/png">
-  <link rel="icon" href="{{'favicon.svg' | relative_url}}" sizes="any" type="image/svg+xml">
+  <link rel="icon" href="{{'logo.svg' | relative_url}}" sizes="any" type="image/svg+xml">
   <link href="https://fonts.googleapis.com/css?family=Nunito:600" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
@@ -18,8 +18,10 @@
 <body>
   <aside>
     <header>
-      <a href="{{'/' | relative_url}}"><h1>clangd</h1></a>
-      <h2>teach your editor C++</h2>
+      <h1><a href="{{'/' | relative_url}}">
+        <span id="logo-text">clangd</span>
+        <img id="logo" src="{{ 'logo.svg' | relative_url }}" alt="">
+      </a></h1><h2>teach your editor C++</h2>
     </header>
     <nav>{% for entry in site.data.navigation %}
       {% if entry == 'separator' %}
