--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ nav a.selected {
   background-color: rgba(50, 150, 220, 0.3);
 }
 nav a.folder::before {
-  content: "▶";
+  content: "►";
   color: #246;
   position: absolute;
   left: 0.5em;
