Add 'edit this page' button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,5 +39,7 @@
   </aside>
   <main>
     {{ content }}
+
+    <a id="edit" title="Edit this page" href="https://github.com/llvm/clangd-www/edit/main/{{ page.path }}">✏️</a>
   </main>
 </body>
