Add anchor links (self links) to headers within pages.
Fixes https://github.com/llvm/clangd-www/issues/47

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <link rel="stylesheet" href="{{'styles.css' | relative_url}}">
   <link rel="icon" href="{{'favicon.png' | relative_url}}" sizes="16x16" type="image/png">
   <link rel="icon" href="{{'logo.svg' | relative_url}}" sizes="any" type="image/svg+xml">
+  <script defer src="{{'scripts.js' | relative_url}}"></script>
   <link href="https://fonts.googleapis.com/css?family=Nunito:600" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
