--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,27 @@ a[href^="https://code.woboq.org/"] {
 .v13::before { content: "clangd-13"; }
 .v14::before { content: "clangd-14"; }
 
+/* Heading anchors (added by JS) */
+main h1, main h2, main h3, main h4 {
+  overflow-x: clip;
+  position: relative;
+}
+.anchor-link {
+  opacity: 50%;
+  margin-left: 0.25em;
+  color: #666;
+  text-decoration: none;
+  position: absolute;
+}
+:hover > .anchor-link { opacity: 100%; }
+.anchor-link span {
+  font-size: 60%;
+  display: none;
+  white-space: nowrap;
+  vertical-align: top;
+}
+.anchor-link:hover span { display: initial; }
+
 .main-article {
   text-align: center;
   font-style: italic;
