--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ a[href^="https://code.woboq.org/"] {
 }
 
 /* Version marker ornaments */
-.v6::before, .v7::before, .v8::before, .v9::before, .v10::before, .v11::before, .v12::before, .v13::before, .v14::before {
+.v6::before, .v7::before, .v8::before, .v9::before, .v10::before, .v11::before, .v12::before, .v13::before, .v14::before , .v15::before {
   color: #008;
   border-radius: 3px;
   padding: 0.2em 0.6em;
@@ -189,6 +189,7 @@ a[href^="https://code.woboq.org/"] {
 .v12::before { content: "clangd-12"; }
 .v13::before { content: "clangd-13"; }
 .v14::before { content: "clangd-14"; }
+.v15::before { content: "clangd-15"; }
 #edit {
   text-decoration: none;
   position: absolute;
