Correct version info for 'missing includes' feature

--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ a[href^="https://code.woboq.org/"] {
 }
 
 /* Version marker ornaments */
-.v6::before, .v7::before, .v8::before, .v9::before, .v10::before, .v11::before, .v12::before, .v13::before, .v14::before, .v15::before, .v16::before {
+.v6::before, .v7::before, .v8::before, .v9::before, .v10::before, .v11::before, .v12::before, .v13::before, .v14::before, .v15::before, .v16::before, .v17::before {
   color: #008;
   border-radius: 3px;
   padding: 0.2em 0.6em;
@@ -191,6 +191,7 @@ a[href^="https://code.woboq.org/"] {
 .v14::before { content: "clangd-14"; }
 .v15::before { content: "clangd-15"; }
 .v16::before { content: "clangd-16"; }
+.v17::before { content: "clangd-17"; }
 #edit {
   text-decoration: none;
   position: absolute;
